[package]
name = "wgrepp"
version = "0.1.0"
edition = "2018"
resolver = "2"
description = "Reusable post-processing effects for wgpu"
repository = "https://github.com/kocsis1david/wgrepp"
keywords = ["wgpu", "post-processing"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Dávid Kocsis <kocsis1david@windowslive.com>"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
bitflags = "1.3.2"
bytemuck = "1.7.2"
num = "0.4.0"
once_cell = "1.8.0"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
shaderc = "0.7.3"
wgpu = "0.10.1"
