[package]
name = "wgrepp"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Reusable post-processing effects for wgpu"
repository = "https://github.com/kocsis1david/wgrepp"
keywords = ["wgpu", "post-processing"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Dávid Kocsis <kocsis1david@windowslive.com>"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitflags = "1.3.2"
bytemuck = "1.7.3"
num = "0.4.0"
once_cell = "1.9.0"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
wgpu = "0.18"
naga = "0.10"

[dev-dependencies]
winit = "0.27"
env_logger = "0.10.0"
tokio = { version = "1.15.0", features = ["full"] }
cgmath = "0.18.0"
