[package]
name = "wgrepp"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Reusable post-processing effects for wgpu"
repository = "https://github.com/kocsis1david/wgrepp"
keywords = ["wgpu", "post-processing"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Dávid Kocsis <kocsis1david@windowslive.com>"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bytemuck = "1.18.0"
num = "0.4"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
wgpu = "0.20"
naga = "0.20"

[dev-dependencies]
winit = "0.29"
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
cgmath = "0.18.0"
